[package]
name = "moter-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
futures-sink = "0.3.28"
rppal = { version = "0.14.1", features = ["hal"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tokio-serial = { version = "5.4.4", features = ["codec"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
